# image_processor

./: README.md
image_processor/: CMakeLists.txt  application.cpp  application.h  base_filter.h  bitmap.cpp  bitmap.h  blur_filter.cpp  blur_filter.h  cmd_line_parser.cpp  cmd_line_parser.h  color.cpp  color.h  crop_filter.cpp  crop_filter.h  edge_detection_filter.cpp  edge_detection_filter.h  filter_pipeline.cpp  filter_pipeline.h  filter_pipeline_factory.cpp  filter_pipeline_factory.h  gs_filter.cpp  gs_filter.h  image_processor.cpp  matrix_filter.cpp  matrix_filter.h  negative_filter.cpp  negative_filter.h  readme.md  sharp_filter.h  tests.cpp
